--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html>
     <head>
         <body>
-            Hello word!
+           <h1>
+            About myself
+           </h1>
+           <h4>
+            My name is slesha chaudhary
+
+           </h4>
         </body>
     </head>
 </html>
