Feat:addeed index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             About myself
            </h1>
            <h4>
-            My name is slesha chaudhary
+            My name is slesha chaudhary!
 
            </h4>
         </body>
