added protofolio with picture

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--this is the index page-->
 <html>
     <head>
         <body>
@@ -9,6 +10,17 @@
             My name is slesha chaudhary!
 
            </h4>
+           <img src="https://th.bing.com/th/id/R.3a9b3027054571e5e3493c13637e1d04?rik=4s3xuRXahi2gkw&riu=http%3a%2f%2flivecode.byu.edu%2fimgs%2fShuksan.jpg&ehk=wunjxJSeS80VQEBXgi1%2fY9QsfWJEXx1eC7dS1p%2bbyFo%3d&risl=&pid=ImgRaw&r=0"">"
+          
         </body>
     </head>
 </html>
+.profile-img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 3px solid #333;
+
+    <div class="profile">
+            <img src="profile.jpg" alt="Profile Picture" class="profile-img">
