added portfolio with picture

--- a/portfolio2.html
+++ b/portfolio2.html
@@ -90,7 +90,7 @@
     <section class="bio">
       <h2>About Me</h2>
       <div class="profile">
-            <img src=""  class="profile-img"></div>
+            <img src="C:\Users\DELL\OneDrive\Pictures\hgvjhbfjlhjlkyfj.jpg" class="profile-img"></div>
       <p>Hello! I'm slesha chaudhary, having strong passion for continuous learning and personal development.I love coding, designing, and learning new technologies to improve my skills.</p>
     </section>
     <section>
