added final portfolio

--- a/portfolio2.html
+++ b/portfolio2.html
@@ -90,7 +90,7 @@
     <section class="bio">
       <h2>About Me</h2>
       <div class="profile">
-            <img src="C:\Users\DELL\OneDrive\Pictures\hgvjhbfjlhjlkyfj.jpg" class="profile-img"></div>
+            <img src="slesha.jpg" width="130" height="120"></div>
       <p>Hello! I'm slesha chaudhary, having strong passion for continuous learning and personal development.I love coding, designing, and learning new technologies to improve my skills.</p>
     </section>
     <section>
@@ -114,7 +114,32 @@
           <div class="hobby">Sleeping </div>
           <div class="hobby">Gaming</div>
         </div> 
-    </section>  
+    </section> 
+    <table border="1">
+      <tr>
+       
+        
+     <th>Level</th>
+        <th>Institution</th>
+        <th>Year</th>
+      </tr>
+      <tr> 
+      <td>SEE</td>
+      <td>milly jully english secondary boarding school </td>
+      <td>2020    </td>
+      </tr>
+      <tr>
+        <td>SLC</td>
+        <td>Aroma college</td>
+        <td>2023</td>
+      </tr>
+      <tr>
+        <td>Bachelor</td>
+        <td>Sagamatha Engineering College</td>
+        <td>   2024- Present</td>
+      </tr>
+    </table>
+  </div> 
       <h2>Contact Me</h2>
       <div class="contact-info">
         <p>Email: sleshachaudhary@gmail.com</p>
